--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css?family=Sanchez');
+  /* @import url('https://fonts.googleapis.com/css?family=Sanchez'); */
   body {
     font-family: 'Sanchez', serif;
     background-color:#39434b;
